--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,3 +1,8 @@
+env:  
+   REPO_URL: "yutian81/yutian81.github.io"  # 改为你自己的仓库  
+   BUILD_PATH: ".vitepress/dist"  # 构建输出路径，不要改  
+   CUSTOM_DOMAIN: "Segment.github.io # 改为你自己的自定义域名
+
 name: Deploy to GitHub Pages
 
 on:
